--- a/style1.css
+++ b/style1.css
@@ -40,3 +40,10 @@ box-sizing: border-box;
 padding: 70px 30px; 
 opacity: 0.8;
 }
+.avatar
+{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    position: absolute;
+}
